--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/ems?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Admin123
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+spring.jpa.hibernate.ddl-auto = update
+server.port=8082
+spring.jpa.show-sql=true
