form based authentication

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 server.port=8082
 spring.jpa.show-sql=true
+logging.level.org.springframework.security=DEBUG
+spring.security.user.name=tanishka
+spring.security.user.password=singhal
+spring.security.user.roles=ADMIN
